--- a/src/css/_var.css
+++ b/src/css/_var.css
@@ -2,6 +2,8 @@
   /* color */
   --color: #008209;
   --color-bg: #95ff9c;
+  --color-text-1: #b3b3b3;
+  --color-text-2: #1b1b1b;
   
   /* font */
   --fs-title-xxl: 2.9rem;
