--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -1,4 +1,5 @@
 .menu {
+  background: linear-gradient(to top, #1b2735, #090a0f);
   position: fixed;
   display: flex;
   flex-direction: column;
@@ -9,9 +10,10 @@
 }
 
 .menu__logo {
-  text-align: center;
+  /* text-align: center; */
   padding: 20px;
-  border-bottom: 1px solid rgb(204, 204, 204);
+  cursor: pointer;
+  /* border-bottom: 1px solid var(--color-bg); */
 }
 
 /* .logo__title {
@@ -49,13 +51,17 @@
 }
 
 .menu__link {
-  color: rgb(58, 58, 58);
+  color: var(--color-text-1);
   font-weight: 400;
   padding: 10px 0;
   cursor: pointer;
   overflow: hidden;
   user-select: none;
   z-index: 5;
+}
+
+.menu__link:hover {
+  color: #090a0f;
 }
 
 .menu__link.active {
