--- a/src/css/_elements.css
+++ b/src/css/_elements.css
@@ -1,18 +1,20 @@
 .btn {
   position: relative;
-  background-color: #26972D;
-  font-weight: 600;
+  background-color: var(--color);
+  font-weight: 500;
   line-height: 24px;
   text-align: center;
-  color: #000000;
+  color: var(--color-text-2);
   padding: 13px 20px;
 }
 
 
 /*************************** BUTTON MODIFY */
 
-.btn_yellow {
-  background-color: var(--color-btn);
+.btn_outline {
+  background-color: transparent;
+  color: var(--color-text-1);
+  border: 2px solid var(--color);
 }
 
 
