--- a/src/components/home/Home.css
+++ b/src/components/home/Home.css
@@ -1,6 +1,6 @@
 .home {
   position: relative;
-  color: var(--color-text-1);
+  color: var(--color-4);
   display: flex;
   flex-direction: column;
   width: 100%;
