--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -53,11 +53,11 @@
 
 .menu__item:hover {
   /* background-color: var(--color-bg) */
-  border: 2px solid var(--color);
+  border: 2px solid var(--color-2);
 }
 
 .menu__link {
-  color: var(--color-text-1);
+  color: var(--color-4);
   font-weight: 400;
   padding: 10px 0;
   cursor: pointer;
@@ -68,7 +68,7 @@
 }
 
 .menu__link.active {
-  color: var(--color);
+  color: var(--color-3);
   font-weight: 500;
 }
 
