--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -1,5 +1,106 @@
 .projects {
-  background-color: rgb(189, 0, 132);
+  background-color: var(--color-1);
   width: 100%;
   height: 100vh;
+}
+
+.projects__header {
+  background-color: var(--color-3);
+  color: var(--color-1);
+  padding: 30px 40px;
+}
+
+.projects__title {
+  font-size: var(--fs-title-xxl);
+  line-height: var(--lh-title-xxl);
+  font-weight: 200;
+  text-transform: uppercase;
+  margin: 0;
+}
+
+.projects__content {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  padding: 50px 0;
+}
+
+.projects__cards {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 1200px;
+}
+
+.projects__card {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 33.333%;
+  max-width: 400px;
+  height: 300px;
+  /* border: 1px solid var(--color-4); */
+}
+
+.card__bg {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.card__bg > img {
+  width: 100%;
+  height: 100%;
+}
+
+.card__hover {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 100%;
+  height: 100%;
+  padding: 0;
+  background-color: var(--color-4);
+  z-index: 5;
+  opacity: 0;
+  transition: all 0.5s;
+}
+
+.card__hover:hover {
+  padding: 20% 0;
+  opacity: 1;
+}
+
+.card__text {
+  width: 100%;
+  margin-bottom: auto;
+  text-align: center;
+  transition: all 0.5s;
+}
+
+.card__title {
+  font-size: var(--fs-subtitle-xxl);
+  line-height: var(--lh-subtitle-xxl);
+  font-weight: var(--fw-subtitle-xxl);
+}
+
+.card__desc {
+  color: var(--color-2);
+}
+
+.card__btn {
+  width: 100%;
+  margin-top: auto;
+  text-align: center;
+  transition: all 0.5s;
+}
+
+.card__link {
+  color: var(--color-1);
+}
+
+.card__link:hover {
+  color: var(--color-4);
 }
