--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -1,7 +1,7 @@
 .projects {
   background-color: var(--color-1);
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .projects__header {
@@ -30,7 +30,7 @@
   justify-content: center;
   flex-wrap: wrap;
   width: 100%;
-  max-width: 1200px;
+  /* max-width: 1200px; */
 }
 
 .projects__card {
@@ -65,7 +65,7 @@
   background-color: var(--color-4);
   z-index: 5;
   opacity: 0;
-  transition: all 0.5s;
+  transition: all 0.4s;
 }
 
 .card__hover:hover {
