--- a/src/css/_config.css
+++ b/src/css/_config.css
@@ -22,9 +22,9 @@ body.lock {
 }
 
 .container {
-  max-width: 1280px;
+  max-width: 1200px;
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   margin: 0 auto;
   padding: 0;
 }
