--- a/src/components/menu/Menu.css
+++ b/src/components/menu/Menu.css
@@ -8,6 +8,11 @@
   height: 100vh;
   box-shadow: 0px 0px 14px 0px rgba(0, 0, 0, 0.4);
 }
+@media (max-width: 992px) {
+  .menu {
+    display: none;
+  }
+}
 
 .menu__logo {
   /* text-align: center; */
