--- a/src/components/menu/MenuMobile.css
+++ b/src/components/menu/MenuMobile.css
@@ -7,28 +7,47 @@
   }
 }
 
-.mobile-menu__burger {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  background-color: var(--color-4);
-  width: 12px;
-  height: 2px;
-  margin-top: 10px;
-  margin-bottom: 10px;
+.mobile-menu__content {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 3;
+  user-select: none;
+  pointer-events: none;
+}
+.mobile-menu__content.active {
+  pointer-events: all;
 }
 
 .mobile-menu__list {
-  position: absolute;
+  position: fixed;
   left: -210px;
   background: linear-gradient(to top, #1b2735, #090a0f);
   width: 100%;
   max-width: 200px;
   height: 100vh;
+  padding-top: 75px;
   z-index: 5;
   transition: all 0.3s;
 }
 .mobile-menu__list.active {
+  left: 0;
+}
+
+.mobile-menu__shadow {
+  position: fixed;
+  left: -110%;
+  background-color: rgba(0, 0, 0, 0.7);
+  width: 100%;
+  height: 100vh;
+  user-select: none;
+  z-index: 4;
+  transition: all 0.3s;
+}
+
+.mobile-menu__list.active + .mobile-menu__shadow {
   left: 0;
 }
 
@@ -38,7 +57,6 @@
 }
 
 .mobile-menu__item:hover {
-  /* background-color: var(--color-bg) */
   border: 2px solid var(--color-2);
 }
 
