--- a/src/components/contact/Contact.css
+++ b/src/components/contact/Contact.css
@@ -5,6 +5,8 @@
 }
 
 .contact__header {
+  position: sticky;
+  top: 0;
   background-color: var(--color-3);
   color: var(--color-1);
   padding: 30px 40px;
