--- a/src/components/menu/MenuMobile.css
+++ b/src/components/menu/MenuMobile.css
@@ -23,17 +23,23 @@
 
 .mobile-menu__list {
   position: fixed;
-  left: -210px;
+  left: -110%;
   background: linear-gradient(to top, #1b2735, #090a0f);
   width: 100%;
   max-width: 200px;
   height: 100vh;
+  overflow-y: scroll;
   padding-top: 75px;
   z-index: 5;
   transition: all 0.3s;
 }
 .mobile-menu__list.active {
   left: 0;
+}
+@media (max-width: 576px) {
+  .mobile-menu__list {
+    max-width: none;
+  }
 }
 
 .mobile-menu__shadow {
@@ -46,9 +52,13 @@
   z-index: 4;
   transition: all 0.3s;
 }
-
-.mobile-menu__list.active + .mobile-menu__shadow {
+.mobile-menu__shadow.active {
   left: 0;
+}
+@media (max-width: 576px) {
+  .mobile-menu__shadow {
+    display: none;
+  }
 }
 
 .mobile-menu__item {
@@ -70,7 +80,12 @@
   z-index: 5;
   transition: all 0.2s;
 }
-
+@media (max-width: 576px) {
+  .mobile-menu__link {
+    justify-content: center;
+    padding: 20px 0;
+  }
+}
 .mobile-menu__link.active {
   color: var(--color-3);
   font-weight: 500;
@@ -80,7 +95,18 @@
   font-size: 2rem;
   padding: 0 15px;
 }
+@media (max-width: 576px) {
+  .mobile-menu__icon {
+    font-size: 3rem;
+  }
+}
 
 .mobile-menu__text {
   line-height: 2;
+}
+@media (max-width: 576px) {
+  .mobile-menu__text {
+    font-size: 2rem;
+    line-height: 1.5;
+  }
 }
