--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -41,7 +41,16 @@
   width: 33.333%;
   max-width: 400px;
   height: 300px;
-  /* border: 1px solid var(--color-4); */
+}
+@media (max-width: 992px) {
+  .projects__card {
+    width: 50%;
+  }
+}
+@media (max-width: 576px) {
+  .projects__card {
+    width: 100%;
+  }
 }
 
 .card__bg {
