--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -1,5 +1,7 @@
 .modal-wrapper {
   position: fixed;
+  top: 0;
+  left: 0;
   display: flex;
   width: 100%;
   height: 100%;
@@ -7,6 +9,7 @@
   align-items: center;
   background: rgba(0, 0, 0, .7);
   z-index: 100;
+  transition: all 0.3s;
 }
 
 .overlay {
@@ -16,7 +19,7 @@
   width: 100%;
   height: 100%;
   z-index: 1;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.6);
   transition: all 0.5s ease-in-out;
 }
 
@@ -30,14 +33,39 @@
 }
 
 .modal {
-  width: 300px;
-  height: 300px;
+  width: 30%;
   z-index: 2;
   opacity: 0;
   visibility: hidden;
   transform: scale(0.5);
   transition: all 0.3s;
 }
+@media (max-width: 1200px) {
+  .modal {
+    width: 40%;
+  }
+}
+@media (max-width: 992px) {
+  .modal {
+    width: 50%;
+  }
+}
+@media (max-width: 768px) {
+  .modal {
+    width: 60%;
+  }
+}
+@media (max-width: 576px) {
+  .modal {
+    width: 70%;
+  }
+}
+@media (max-width: 486px) {
+  .modal {
+    width: 90%;
+  }
+}
+
 .modal.show {
   opacity: 1;
   visibility: visible;
@@ -45,9 +73,13 @@
 }
 
 .modal__close {
+  position: absolute;
+  bottom: 0%;
+  right: 0%;
   cursor: pointer;
+  /* transform: scale(2); */
 }
 .modal__close:hover {
-  transform: scale(1.3);
+  /* transform: scale(2.3); */
   transition: all 0.3s;
 }
