--- a/src/components/modal/Modal.css
+++ b/src/components/modal/Modal.css
@@ -10,6 +10,13 @@
   background: rgba(0, 0, 0, .7);
   z-index: 100;
   transition: all 0.3s;
+  opacity: 0;
+  visibility: hidden;
+}
+
+.show {
+  opacity: 1;
+  visibility: visible;
 }
 
 .overlay {
@@ -23,17 +30,12 @@
   transition: all 0.5s ease-in-out;
 }
 
-.hidden {
-  opacity: 0;
-  visibility: hidden;
-}
-.hidden.show {
-  opacity: 1;
-  visibility: visible;
-}
-
 .modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 30%;
+  height: 95%;
   z-index: 2;
   opacity: 0;
   visibility: hidden;
@@ -70,16 +72,4 @@
   opacity: 1;
   visibility: visible;
   transform: scale(1);
-}
-
-.modal__close {
-  position: absolute;
-  bottom: 0%;
-  right: 0%;
-  cursor: pointer;
-  /* transform: scale(2); */
-}
-.modal__close:hover {
-  /* transform: scale(2.3); */
-  transition: all 0.3s;
 }
