--- a/src/components/projects/ModalProject.css
+++ b/src/components/projects/ModalProject.css
@@ -1,3 +1,10 @@
+.mp__img {
+  width: 100%;
+  max-height: 70%;
+  object-fit: contain;
+  margin-bottom: 5%;
+}
+
 .mp__title {
   font-size: var(--fs-modal-xxl);
   line-height: var(--lh-modal-xxl);
@@ -6,11 +13,19 @@
   text-align: center;
 }
 
+.mp__buttons {
+  display: flex;
+  justify-content: space-between;
+}
+
 .mp__link {
   text-transform: uppercase;
 }
 
-.mp__img {
-  width: 100%;
-  margin-bottom: 5%;
+.modal__close {
+  cursor: pointer;
+}
+
+.modal__close:hover {
+  transition: all 0.3s;
 }
