--- a/src/components/projects/Projects.css
+++ b/src/components/projects/Projects.css
@@ -39,8 +39,10 @@
   justify-content: center;
   align-items: center;
   width: 33.333%;
+  /* width: 30.333%; */
   max-width: 400px;
   height: 300px;
+  /* margin: 3px; */
 }
 @media (max-width: 992px) {
   .projects__card {
@@ -57,11 +59,18 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  background-color: var(--color-3);
+  overflow: hidden;
+}
+
+.card__bg_even {
+  background-color: var(--color-2);
 }
 
 .card__bg > img {
   width: 100%;
   height: 100%;
+  object-fit: contain;
 }
 
 .card__hover {
